# Dev_Cli_Lib

./: Cargo.toml  README.md  cog.toml  devfile.yaml  package.json
apps/cli/: Cargo.toml  project.json
apps/prepare/: Cargo.toml  project.json
apps/prepare/src/: crd.rs  devfile_schema.rs  main.rs
libs/crd/: Cargo.toml  readme.md
libs/crd/src/: devworkspaces.rs  devworkspacetemplates.rs  lib.rs
libs/devfile_schema/: Cargo.toml  project.json  readme.md
libs/devfile_schema/src/: context.rs  devfile_type.rs.pre  lib.rs
libs/devfile_schema/src/bitbucket/: resolver.rs  url.rs
libs/devfile_schema/src/bitbucket_server/: resolver.rs  url.rs
libs/devfile_schema/src/component_handler/: finder.rs  inserter.rs  mod.rs
libs/devfile_schema/src/editor/: mod.rs
libs/devfile_schema/src/generate/: content.rs  metadata.rs  mod.rs
libs/devfile_schema/src/github/: mod.rs  resolver.rs  url.rs
libs/devfile_schema/src/mains/: mod.rs  replace_projects.rs
libs/devfile_schema/src/resolver/: mod.rs
libs/devfile_schema/src/schemas/: devfile_2_2_0.rs  devfile_2_2_1.rs  devfile_2_2_2.rs  devfile_2_3_0.rs  mod.rs
libs/devfile_schema/src/validator/: mod.rs
