[package]
name = "crd"
version = "0.1.0"
edition = "2021"

[dependencies]
k8s-openapi = { version = "0.25", features = ["latest", "schemars"] }
kube = { workspace = true }
schemars = { version = "0.8", features = ["derive"] }
serde.workspace = true
serde_json = { workspace = true }
serde_yaml = { workspace = true }
typed-builder = "0.21.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
