[package]
name = "devfile_schema"
version = "0.1.0"
edition = "2021"

[dependencies]
jsonschema = "0.33.0"
regress = "0.10.4"
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tracing = "0.1.41"
typify = "0.4.3"
crd = { path = "../crd" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
